[tool.poetry]
name = "ames-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ames_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
